[gd_scene load_steps=13 format=3 uid="uid://ced4ch7o1enqp"]

[ext_resource type="Script" uid="uid://ce7d2b1hcfpno" path="res://moving_rock.gd" id="1_jmvcb"]
[ext_resource type="Texture2D" uid="uid://bdrqd5mopxeup" path="res://LeapNight Assets/Sprites/Traps/Rock Head/Bottom Hit (42x42).png" id="2_qj7hx"]
[ext_resource type="Texture2D" uid="uid://b1wjmxwdgvywl" path="res://LeapNight Assets/Sprites/Traps/Rock Head/Idle.png" id="3_hiq11"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k4qae"]
atlas = ExtResource("2_qj7hx")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_xncam"]
atlas = ExtResource("2_qj7hx")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rmvw"]
atlas = ExtResource("2_qj7hx")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvylc"]
atlas = ExtResource("2_qj7hx")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpsls"]
atlas = ExtResource("3_hiq11")
region = Rect2(0, 0, 42, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_b1ex1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4qae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xncam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rmvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvylc")
}],
"loop": true,
"name": &"bottom_hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpsls")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jmvcb"]
size = Vector2(32, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7mf1e"]
size = Vector2(32, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7hmc"]
size = Vector2(32, 4)

[node name="MovingRock" type="StaticBody2D"]
collision_layer = 4
script = ExtResource("1_jmvcb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_b1ex1")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_jmvcb")

[node name="Action Area" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Action Area"]
position = Vector2(0, 39)
shape = SubResource("RectangleShape2D_7mf1e")

[node name="Kill Area" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kill Area"]
position = Vector2(0, 14)
shape = SubResource("RectangleShape2D_w7hmc")
debug_color = Color(0.94192, 0.192101, 0.378523, 0.42)

[connection signal="body_entered" from="Action Area" to="." method="_on_action_area_body_entered"]
[connection signal="body_entered" from="Kill Area" to="." method="_on_kill_area_body_entered"]
